5856 syscall/memctl should compare attr != 0, being an int, instead of NULL Reviewed by: Robert Mustacchi <rm@joyent.com> Approved by: Dan McDonald <danmcd@omniti.com>